fix sponsor overflow issue

--- a/src/components/sponsors/sponsor.scss
+++ b/src/components/sponsors/sponsor.scss
@@ -19,9 +19,11 @@
 }
 
 .sponsor-gallery .gallery {
-  margin: 15px;
+  // margin: 15px;
   // border: 1px solid #ccc;
-  float: left;
+  // float: left;
+  // padding-bottom: 5px;
   width: 275px;
-  height: 150px;
+  height: auto;
+  margin: auto;
 }
